--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
             <!-- <a href="{{ site.baseurl }}/">Blog</a> -->
             <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/softwares">Softwares</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
           </nav>
         </header>
