--- a/style.scss
+++ b/style.scss
@@ -296,6 +296,14 @@ footer {
   max-width: 600px; 
 }
 
+#img_softwares {
+  margin: 0px auto; 
+  max-width: 500px;
+  img {
+    border-radius: 5px;
+  } 
+}
+
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
