--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,6 +26,7 @@
             <a href="{{ site.baseurl }}/projects">Projects</a>
             <a href="{{ site.baseurl }}/softwares">Softwares</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
+            <a href="{{ site.baseurl }}/cv">CV</a>
           </nav>
         </header>
       </div>
