--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
             <a href="{{ site.baseurl }}/">About</a>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/projects">Projects</a>
-            <a href="{{ site.baseurl }}/softwares">Softwares</a>
+            <a href="{{ site.baseurl }}/software">Software</a>
             <a href="{{ site.baseurl }}/publications">Publications</a>
             <a href="{{ site.baseurl }}/cv">CV</a>
           </nav>
