--- a/org/resources/style/mycss.css
+++ b/org/resources/style/mycss.css
@@ -46,6 +46,7 @@ footer a {
     display: none;
 }
 
+#text-people,
 #text-software,
 #text-publications,
 #text-research {
@@ -61,6 +62,8 @@ footer a {
 	left: calc((100% + 750px) / 2 + 2rem);
 	font-size: 1.1rem;
     }
+    
+    #text-people,
     #text-software,
     #text-publications,
     #text-research {
