--- a/org/resources/style/mycss.css
+++ b/org/resources/style/mycss.css
@@ -102,8 +102,16 @@ h5 {
 }
 
 #navpage {
-    display:inline-block; 
+    display: inline-block; 
     margin-right: 0.4rem;
+}
+
+#stripes {
+    position: absolute;
+    top: 2rem;
+    right: calc((100% - var(--body-max-width)) / 2);
+    height: calc(3.8rem + 8px);
+    width: auto;
 }
 
 /* End */
